deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkout
  labels:
    app.kubernetes.io/part-of: slo-canary-platform
    istio-injection: disabled
